[package]
name = "vonageproxy"
version = "0.2.5"
authors = ["Nikola Whallon <nikola@deepgram.com>"]

[dependencies]
actix = "^0.7"
actix-web = { version = "^0.7", features = ["alpn"] }
openssl-probe = "^0.1"
env_logger = "^0.5"
futures-await = "^0.1"
serde = "^1"
serde_derive = "^1"
serde_urlencoded = "^0.5"
serde_json = "^1"
url = "^1.7"
failure = "^0.1"
base64 = "^0.9"
chrono = "^0.4"
log = "^0.4"
